--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -115,7 +115,7 @@
             <button type="submit" class="btn btn-admin-login">Login as Admin</button>
         </form>
         <div class="back-to-home">
-            <a href="{{ url_for('index') }}"><i class="fas fa-arrow-left"></i> Back to User Login</a>
+            <a href="{{ url_for('home') }}"><i class="fas fa-arrow-left"></i> Back to Home</a>
         </div>
     </div>
 
